--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.0.1",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.4.15",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/common": "^10.4.17",
+    "@nestjs/core": "^10.4.17",
+    "@nestjs/microservices": "^10.4.17",
+    "@nestjs/platform-express": "^10.4.17",
     "@nestjs/typeorm": "^11.0.0",
     "bus-management-service": "file:",
     "cache-manager": "^6.4.1",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "ioredis": "^5.6.0",
     "pg": "^8.14.1",
     "redis": "^4.7.0",
